setup new rails project with postgres

--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,14 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
+/public/uploads
+
+# DS store files should be ignored
+**.DS_Store
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
-config/initializers/secret_token.rb
-config/secrets.yml
+#config/initializers/secret_token.rb
+#config/secrets.yml
 
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
@@ -40,3 +44,12 @@ bower.json
 
 # Ignore Byebug command history file.
 .byebug_history
+
+# temp files
+~$data_import.xlsx
+
+/node_modules
+/node_modules/*
+/public/**/*.js
+/public/**/*.map
+/typings
